Edit windows blank file creation in conan profile Action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,11 @@ jobs:
     - name: Create conan2 profile
       run: |
         if [ "$RUNNER_OS" == "Windows" ]; then
-          conan profile detect | Out-File -FilePath ${{ runner.temp }}/conan_profile
-          echo "[conf]" | Out-File -FilePath ${{ runner.temp }}/conan_profile -Append
-          echo "tools.system.package_manager:mode=install" | Out-File -FilePath ${{ runner.temp }}/conan_profile -Append
-          echo "tools.system.package_manager:sudo=True" | Out-File -FilePath ${{ runner.temp }}/conan_profile -Append
-        else
-          conan profile detect > ${{ runner.temp }}/conan_profile
-          echo "[conf]" >> ${{ runner.temp }}/conan_profile
-          echo "tools.system.package_manager:mode=install" >> ${{ runner.temp }}/conan_profile
-          echo "tools.system.package_manager:sudo=True" >> ${{ runner.temp }}/conan_profile
-        fi
+          type nul >> ${{ runner.temp }}/conan_profile
+        conan profile detect > ${{ runner.temp }}/conan_profile
+        echo "[conf]" >> ${{ runner.temp }}/conan_profile
+        echo "tools.system.package_manager:mode=install" >> ${{ runner.temp }}/conan_profile
+        echo "tools.system.package_manager:sudo=True" >> ${{ runner.temp }}/conan_profile
     - name: Install repo
       run: |
         conan install . -pr=${{ runner.temp }}/conan_profile
