Modify permissions check in windows blank file creation in conan profile Action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
       run: |
         if [ "$RUNNER_OS" == "Windows" ]; then
           # icacls ${{ runner.temp }}
-          powershell dir ${{ runner.temp }}
+          cacls ${{ runner.temp }}
+          # powershell dir ${{ runner.temp }}
           type NUL > ${{ runner.temp }}/conan_profile
         fi
         conan profile detect > ${{ runner.temp }}/conan_profile
