--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Create conan2 profile
       run: |
         if [ "$RUNNER_OS" == "Windows" ]; then
-          if not exist "${{ runner.temp }}" mkdir ${{ runner.temp }}
+          if not exist "${{ runner.temp }}"; then
+             mkdir ${{ runner.temp }}
+          fi
           # icacls ${{ runner.temp }}
           # cacls ${{ runner.temp }}
           # powershell dir ${{ runner.temp }}
