--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           # cacls ${{ runner.temp }}
           # powershell dir ${{ runner.temp }}
           # type NUL > ${{ runner.temp }}/conan_profile
-          type "" > ${{ runner.temp }}/conan_profile
+          # type "" > ${{ runner.temp }}/conan_profile
         fi
         conan profile detect > ${{ runner.temp }}/conan_profile
         echo "[conf]" >> ${{ runner.temp }}/conan_profile
