Revert "Remove step Create Conan profile from Actions"
This reverts commit b753bb1558d53097f73ad0d02b80f7a225b16582.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,22 +21,22 @@ jobs:
         python-version: '3.11.5'
     - name: Install conan2
       uses: turtlebrowser/get-conan@main
-    #- name: Create conan2 profile
-    #  run: |
-    #    if [ "$RUNNER_OS" == "Windows" ]; then
-    #      if [ -d "${{ runner.temp }}" ]; then
-    #         mkdir -p ${{ runner.temp }}
-    #      fi
-    #      # icacls ${{ runner.temp }}
-    #      # cacls ${{ runner.temp }}
-    #      # powershell dir ${{ runner.temp }}
-    #      # type NUL > ${{ runner.temp }}/conan_profile
-    #      # type "" > ${{ runner.temp }}/conan_profile
-    #    fi
-    #    conan profile detect > ${{ runner.temp }}/conan_profile
-    #    echo "[conf]" >> ${{ runner.temp }}/conan_profile
-    #    echo "tools.system.package_manager:mode=install" >> ${{ runner.temp }}/conan_profile
-    #    echo "tools.system.package_manager:sudo=True" >> ${{ runner.temp }}/conan_profile
+    - name: Create conan2 profile
+      run: |
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          if [ -d "${{ runner.temp }}" ]; then
+             mkdir -p ${{ runner.temp }}
+          fi
+          # icacls ${{ runner.temp }}
+          # cacls ${{ runner.temp }}
+          # powershell dir ${{ runner.temp }}
+          # type NUL > ${{ runner.temp }}/conan_profile
+          # type "" > ${{ runner.temp }}/conan_profile
+        fi
+        conan profile detect > ${{ runner.temp }}/conan_profile
+        echo "[conf]" >> ${{ runner.temp }}/conan_profile
+        echo "tools.system.package_manager:mode=install" >> ${{ runner.temp }}/conan_profile
+        echo "tools.system.package_manager:sudo=True" >> ${{ runner.temp }}/conan_profile
     - name: Install repo
       run: |
         # conan install . -pr=${{ runner.temp }}/conan_profile
