--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@ project(cpp_template CXX)
 
 message("Building with CMake version: ${CMAKE_VERSION}")
 
-
+# Add project headers
 include_directories(include)
 
+# Add project
 add_library(cpp_template src/cpp_template.cpp include/cpp_template.h)
 #target_include_directories(cpp_template PUBLIC include)
 #target_link_libraries(cpp_template)
@@ -20,11 +21,10 @@ message("CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
 include(${CMAKE_BINARY_DIR}/cmake_install.cmake)
 #include(${CMAKE_BINARY_DIR}/generators/conan_toolchain.cmake)
 message("CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}")
-#conan_basic_setup()
 #include(${CMAKE_PREFIX_PATH})
 
 
-
+# Find and add all tests
 
 find_package(Catch2 REQUIRED)
 
@@ -35,6 +35,5 @@ target_link_libraries(all_tests cpp_template Catch2::Catch2WithMain)
 include(Catch)
 catch_discover_tests(all_tests)
 
-#enable_testing()
-
+# This would work if the tests directory had its own CmakeLists.txt file.
 #add_subdirectory(tests)
